--- a/tutor/templates/tutor/viewExams.html
+++ b/tutor/templates/tutor/viewExams.html
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Course Name or Id" required>
+                        <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Exam or Course" required>
                     </div>
 
                     <!-- Grid column -->
@@ -244,8 +244,8 @@
                                 <th>Total No. of Questions</th>
                                 <th>Pass Percentage</th>
                                 <th>Exam status</th>
-                                <th>Edit</th>
-                                <th>Delete</th>
+                                <th colspan="2">Action</th>
+                                
                             </tr>
                         </thead>
                         <!--Table head-->
