--- a/tutor/templates/tutor/Results/examResultsAll.html
+++ b/tutor/templates/tutor/Results/examResultsAll.html
@@ -224,7 +224,7 @@
                     </div>
 
                     <div class="col-md-4">
-                        <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Course Name or Id" required>
+                        <input id="searchbox" type="text" class="form-control" name='srh' placeholder="Search Exam or Course" required>
                     </div>
 
                     <!-- Grid column -->
