--- a/tutor/templates/tutor/editExamQuestionsTutor.html
+++ b/tutor/templates/tutor/editExamQuestionsTutor.html
@@ -1,4 +1,4 @@
-{% extends 'tutor/dashboard.html' %}
+{% extends 'tutor/dashboardTutor.html' %}
 {% load static %}
 {% block css %}
 <style media="screen">
@@ -273,7 +273,7 @@
                                 <td><a href="{% url 'toggle' i.id %}" class="btn btn-primary p-1">Activate</a></td>
                                 {% endif %}
                                 <td>
-                                    <a href="{% url 'editquestions' i.id %}"><i class="fas fa-edit"></i></a>
+                                    <a href="{% url 'editquestionstutor' i.id %}"><i class="fas fa-edit"></i></a>
                                 </td>
                                 <td>
                                     <a href="{% url 'deleteexam' i.id %}"><i class="fas fa-trash"></i></a>
