--- a/tutor/templates/tutor/enrolledStudents.html
+++ b/tutor/templates/tutor/enrolledStudents.html
@@ -397,7 +397,9 @@ margin-left: 4px;
 
                 {% endfor %}
             {% else %}
-                <h6 style="color:White;">No Data Found</h6>
+            <div class="card container h-25 m-0">
+              <h5 class="mt-2 mb-2 p-2">No Data Found</h5>
+            </div>
             {% endif %}
 
 </div>
