--- a/tutor/templates/tutor/calendarCoaching.html
+++ b/tutor/templates/tutor/calendarCoaching.html
@@ -30,7 +30,12 @@
         </div>
     </div>
         {% endif %}
-
+        {% if validated %}
+        {% else %}
+        <div class="alert alert-success pb-0" role="alert" id="validate">
+  <p class="text-dark">Your Email Is not Validated. <a href="{% url 'coachingprofile' %}" id="code" class="p-1">Click Here</a> to Validate.<p>
+</div>
+        {% endif %}
     <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.css' rel='stylesheet' />
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.0.0/main.min.js'></script>
     <div class="container" id="card">
@@ -232,6 +237,5 @@
       });
 
     </script>
-
 </div>
 {% endblock %}
