--- a/tutor/templates/tutor/dashboardStudent.html
+++ b/tutor/templates/tutor/dashboardStudent.html
@@ -76,7 +76,7 @@
             </li>
             <li><i class="fa fa-users fa-fw" aria-hidden="true"></i><a href="/enrolledTutors/"> Search tutor</a>
             </li>
-            <li><i class="fa fa-credit-card fa-fw" aria-hidden="true"></i><a href="/tutorCalendar/"> Ongoing Class</a>
+            <li><i class="fa fa-credit-card fa-fw" aria-hidden="true"></i><a href="{% url 'calendar' %}"> Ongoing Class</a>
             </li>
             <li><i class="fa fa-credit-card fa-fw" aria-hidden="true"></i><a href="/postAssignment/"> Post Assignment</a>
             </li>
