--- a/tutor/templates/tutor/enrolledStudents.html
+++ b/tutor/templates/tutor/enrolledStudents.html
@@ -1,4 +1,4 @@
-{% extends 'tutor/dashboardStudent.html' %}
+{% extends 'tutor/dashboardTutor.html' %}
 {% load static %}
 {% block css %}
 <style>
@@ -211,7 +211,7 @@ margin-left: 4px;
 </style>
 {% endblock %}
 {% block body %}
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCBJybI10-Xa43-F5GSad1i0Y9W3yqlW6Q&libraries=places&v=3" defer></script>
 <div class="container">
     {% if errors %}
     <div class="alert alert-danger" role="alert">
@@ -238,9 +238,9 @@ margin-left: 4px;
             <div class="card-body container">
                 <div class="row d-flex justify-content-end">
                     <div class="col-sm-3 input-group form-group justify-content-center d-flex">
-                       <input id="pac-input" type="text" class="controls form-control" name='loc' placeholder="Search Location">
-                       <input type="hidden" id="cityLat" name="cityLat" />
-                       <input type="hidden" id="cityLng" name="cityLng" />
+                      <input id="pac-input" type="text" class="controls form-control" name='loc' placeholder="Search Your Location or Get Location" required><button class="btn btn-info btn-sm" id="getUserLocation" type="button" name="getUserLocation">Get</button>
+                      <input type="hidden" id="cityLat" name="cityLat" />
+                      <input type="hidden" id="cityLng" name="cityLng" />
                     </div>
                     <div class="col-sm-2 input-group form-group justify-content-center d-flex">
                         <select id="className" name="className" class="custom-select form-control">
@@ -268,39 +268,6 @@ margin-left: 4px;
         </form>
 
         </div>
-        <!-- <br>
-        <br> -->
-        <!-- <div class="card card-width col-sm-12" style="padding-top:1rem;padding-bottom:2rem;">
-            <h4>Filters</h4>
-
-            <div class="card-body container filters">
-                <div class="row d-flex justify-content-end">
-                    <!-- <div class="col-sm-2 input-group form-group justify-content-center d-flex">
-                        <label class="control-label">Distance &nbsp;</label>
-                        <input type="number" class="form-control filterInputs" id="filterDistance" value="10*4">
-                    </div>
-                    <div class="col-sm-2 input-group form-group justify-content-center d-flex">
-                        <label class="control-label">Experience </label>
-                         <input type="number" class="form-control filterInputs" id="filterExperience" value="0">
-                    </div>
-                    <div class="col-sm-3 input-group form-group justify-content-center d-flex">
-                        <label class="control-label"> Demo Availaible Only : &nbsp;</label>
-                         <input class="form-control filterInputs" type="checkbox" id="filterDemo" checked>
-                    </div>
-                    <div class="col-sm-4 input-group form-group justify-content-center d-flex">
-                        <label class="control-label"> Budget  &nbsp;</label>
-                        <input type="range" min="1" max="100000" step="0.01" class="form-control filterInputs" id="filterBudget" value="10*5">
-                    </div>
-                    <div class="col-sm-1 input-group form-group justify-content-center d-flex">
-                        <span id="sliderval">100000</span>
-                    </div> -->
-                    <!-- <div class="col-sm-2 input-group form-group justify-content-center d-flex">
-                        <label class="control-label">Distance &nbsp;</label>
-                        <input type="number" class="form-control filterInputs" id="filterDistance" value="10*4">
-                    </div> -->
-                <!-- </div>
-            </div>
-          </div> -->
                     <div class="container col-sm-12 profile-container">
                       <div class="row profile-cards">
             {% if allData %}
@@ -333,68 +300,6 @@ margin-left: 4px;
                             </div>
                           </div>
                         </div>
-
-<!-- modal -->
-<!-- <div class="modal fade" id="tutorModal{{i.snum}}" tabindex="-1" role="dialog" aria-labelledby="{{i.snum}}" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title d-flex justify-content-center col-sm-10" style="color: rgb(66, 8, 8); text-align: center;" id="{{i.snum}}">{{i.firstName}} {{i.lastName}}</h5>
-      </div>
-
-      <div class="modal-body">
-
-          <div class="row">
-              <div class="col-sm-10">
-                  <div class="row" style="color:brown;">
-                      <div class="col-sm-6 d-flex justify-content-center headi">
-                          Email: {{i.email}}
-                      </div>
-                      <div class="col-sm-6 d-flex justify-content-center headi" style="">
-                          Phone: {{i.phone}}
-                      </div>
-                  </div>
-                  <br>
-                  <br>
-                  <div class="row">
-                      <div class="col-sm-2 text-center headi">Distance : </div><div class="col-sm-2">{{i.distance}}</div>
-                      <div class="col-sm-2 text-center headi">Qualification: </div><div class="col-sm-2">{{i.qualification}}</div>
-                      <div class="col-sm-2 text-center headi">Fees : </div><div class="col-sm-2">{{i.fees}}</div>
-
-                  </div>
-                  <br><br>
-                  <hr>
-
-              </div>
-              <div class="col-sm-2 imageBlock">
-                <div class="row d-flex justify-content-center ">
-                  {% if i.photo %}
-                      <img class="avatar rounded-circle" src="{{MEDIA_URL}}{{i.photo.url}}" alt="Not Found"/>
-                  {% else %}
-                      {% if i.gender == "Male" %}
-                  <img class="avatar rounded-circle" src="{% static 'default-male.jpg' %}" alt="Default Not Found"/>
-                      {% else %}
-                  <img class="avatar rounded-circle" src="{% static 'default-female.jpg' %}" alt="Default Not Found"/>
-                      {% endif %}
-                  {% endif %}
-                 </div>
-                 <div class="d-flex justify-content-center row">
-                     <p>
-                     {% if i.availability == True %}
-                         <td align="center" style="font-size: 1.5rem"><i class="fas fa-check"></i></td>
-                         {% else %}
-                         <td align="center" style="font-size: 1.5rem"><i class="fas fa-times"></i></td>
-                         {% endif %}
-                     </p>
-                 </div>
-              </div>
-          </div>
-      <br>
-      </div>
-    </div>
-  </div>
-</div> -->
-
                 {% endfor %}
             {% else %}
             <div class="card container h-25 m-0">
@@ -433,16 +338,6 @@ margin-left: 4px;
             showAsideBtn.click();
           }, 0);
 
-          function initialize() {
-               var input = document.getElementById('pac-input');
-               var autocomplete = new google.maps.places.Autocomplete(input);
- 			  google.maps.event.addListener(autocomplete, 'place_changed', function () {
- 		            var place = autocomplete.getPlace();
- 		            document.getElementById('cityLat').value = place.geometry.location.lat();
- 		            document.getElementById('cityLng').value = place.geometry.location.lng();
- 				});
-             }
-
           initialize();
           // $(".modal").modal();
           $(".filterInputs").on("change",function(){
@@ -470,7 +365,6 @@ margin-left: 4px;
                           }
                       }
                   }
-
           });
 
 });
@@ -480,5 +374,56 @@ margin-left: 4px;
     $(".multiselect3").multiselect();
 
 
+</script>
+<script type="text/javascript">
+  $(document).on("DOMContentLoaded",function(){
+    function showPosition(position) {
+        document.getElementById('pac-input').value = "processing...";
+         document.getElementById('cityLat').value = position.coords.latitude;
+         document.getElementById('cityLng').value = position.coords.longitude;
+
+ $.ajax({
+         type: "POST",
+         url: "/ajaxLocation/",
+         data: {
+             'cityLat': position.coords.latitude,
+             'cityLng': position.coords.longitude,
+             'ajax': 1
+         },
+         success: function (response) {
+             if (response.status == 'success') {
+       document.getElementById('pac-input').value = response.result;
+             }
+             else {
+                 document.getElementById('pac-input').value = response.error;
+             }
+         },
+         error: function () {
+             document.getElementById('pac-input').value = "";
+         }
+     });
+
+      }
+    function getLocation() {
+        if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+        } else {
+        //  "Geolocation is not supported by this browser.";
+        }
+      }
+    $("#getUserLocation").on("click", getLocation);
+
+    function initialize() {
+       var input = document.getElementById('pac-input');
+       var autocomplete = new google.maps.places.Autocomplete(input);
+google.maps.event.addListener(autocomplete, 'place_changed', function () {
+        var place = autocomplete.getPlace();
+        document.getElementById('cityLat').value = place.geometry.location.lat();
+        document.getElementById('cityLng').value = place.geometry.location.lng();
+});
+     }
+     initialize();
+
+  });
 </script>
 {% endblock %}
